# meloniq

./: .gitignore  CLAUDE.md  README.md  README_TR.md  build_portable.bat  build_portable.ps1  meloniq.spec  meloniq_portable.spec  pyproject.toml  requirements.txt  run.py  setup.iss  start_meloniq.bat  test_loopback.py  test_vocal_detection.py
.maestro/: brain-sync.state  sync.state
scripts/: download_ffmpeg.py
src/meloniq/: __init__.py  config.py  main.py
src/meloniq/analysis/: __init__.py  chords.py  key.py  loudness.py  meter.py  pipeline.py  structure.py  tempo.py
src/meloniq/audio_capture/: __init__.py  capture_manager.py  ring_buffer.py  system_audio.py
src/meloniq/audio_io/: __init__.py  loader.py  player.py  youtube_downloader.py
src/meloniq/models/: __init__.py  results.py
src/meloniq/resources/: localization.py
src/meloniq/ui/: __init__.py  capture_panel.py  main_window.py  results_panel.py  timeline_widget.py  waveform_widget.py
tests/: TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  test_key.py  test_key_vocal.py  test_tempo.py  validate_key_accuracy.py
tests/performance/: OPTIMIZATION_RESULTS.md  PERFORMANCE_REPORT.md  README.md  __init__.py  benchmark_key_detection.py  profile_key_detection.py  test_optimizations.py  validate_new_implementation.py
